--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div id="div1" >
+    <div class="flex-container" id="div1"  >
         <center>
             <p id="p1"></p>
             <div id="div2" >
@@ -16,7 +16,7 @@
             </div>
 
             <div id="div3">
-                <p>Bienvenido señor usuario</p>
+                <p font-family: Arial, sans-serif; font-size: 1px>Bienvenido señor usuario</p>
                 <p>que desear hacer</p>
                 <p></p>
                 
@@ -24,7 +24,7 @@
                     Iniciar sesion
                 </button>
                     
-                <button onclick="window.location.href='index_sesion1.html';">
+                <button onclick="window.location.href='index_registro1.html';">
                     Registrar cliente
                 </button>
 
