--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <p>Bienvenido señor usuario que deseas</p>
     <button class="button" formnovalidate onclick="document.getElementById('iniciar-sesion').style.display = 'block'; document.getElementById('inicio').style.display = 'none'">Iniciar sesion</button>
     <button class="button" formnovalidate onclick="document.getElementById('registrarse').style.display = 'block'; document.getElementById('inicio').style.display = 'none'">Registrarse</button>
+    <button class="button" formnovalidate onclick="document.getElementById('calificacion1').style.display = 'block'; document.getElementById('inicio').style.display = 'none'">Calificacion de servicio</button>
+    <button class="button" formnovalidate onclick="document.getElementById('calificacion2').style.display = 'block'; document.getElementById('inicio').style.display = 'none'">Calificacon del conductor</button>
+    <button class="button" formnovalidate onclick="document.getElementById('calificacion3').style.display = 'block'; document.getElementById('inicio').style.display = 'none'">Calificacion de la APP</button>
   </div>
 
   <!-- Iniciar sesión -->
@@ -39,39 +42,37 @@
   <div class="container" id="registrarse" style="display: none;">
     <h2>Registrarse</h2>
     <form id="registrarse-form" action="#">
-      <div class="form-group">
-        <label for="correo">Correo:</label>
-        <input type="email" id="correo" name="correo" required>
+      <div class="grupo-de-formulario">
+        <div class="form-group">
+          <label for="correo">Correo:</label>
+          <input type="email" id="correo" name="correo" required>
+        </div>
+        <div class="form-group">
+          <label for="nombre">Nombre:</label>
+          <input type="text" id="nombre" name="nombre" required>
+        </div>
+        <div class="form-group">
+          <label for="apellido">Apellido:</label>
+          <input type="text" id="apellido" name="apellido" required>
+        </div>
+        <div class="form-group">
+          <label for="telefono">Teléfono:</label>
+          <input type="tel" id="telefono" name="telefono" required>
+        </div>
+        <div class="form-group">
+          <label for="usuario">Usuario:</label>
+          <input type="text" id="usuario" name="usuario" required>
+        </div>
+        <div class="form-group">
+          <label for="contraseña">Contraseña:</label>
+          <input type="password" id="contraseña" name="contraseña" required>
+        </div>
+        <div class="form-group">
+          <label for="confirmar_contraseña">Confirmar contraseña:</label>
+          <input type="password" id="confirmar_contraseña" name="confirmar_contraseña" required>
+        </div>
       </div>
-      <div class="form-group">
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" required>
-      </div>
-      <div class="form-group">
-        <label for="apellido">Apellido:</label>
-        <input type="text" id="apellido" name="apellido" required>
-      </div>
-      <div class="form-group">
-        <label for="telefono">Telefono:</label>
-        <input type="tel" id="telefono" name="telefono" required>
-      </div>
-      <div class="form-group">
-        <label for="usuario">Usuario:</label>
-        <input type="text" id="usuario" name="usuario" required>
-      </div>
-      <div class="form-group">
-        <label for="contraseña">Contraseña:</label>
-        <input type="password" id="contraseña" name="contraseña" required>
-      </div>
-      <div class="form-group">
-        <label for="confirmar_contraseña">Confirmar contraseña:</label>
-        <input type="password" id="confirmar_contraseña" name="confirmar_contraseña" required>
-      </div>
-      <button type="submit" form="registrarse-form" 
-              onclick="document.getElementById('registrarse').style.display = 'none'; 
-                       document.getElementById('seleccionar-tipo-cliente').style.display = 'block'">
-        Registrarse
-      </button>
+      <button type="submit" form="registrarse-form">Registrarse</button>
       <div class="volver">
         <button type="button" formnovalidate onclick="document.getElementById('registrarse').style.display = 'none'; document.getElementById('inicio').style.display = 'block'">Volver</button>
       </div>
@@ -87,7 +88,7 @@
     </div>
     <br><br>
     <div class="volver">
-      <button class="button" formnovalidate onclick="document.getElementById('seleccionar-tipo-cliente').style.display = 'none'; document.getElementById('registrarse').style.display = 'block'">Volver</button>
+      <button class="button" formnovalidate onclick="document.getElementById('seleccionar-tipo-cliente').style.display = 'none'; document.getElementById('iniciar-sesion').style.display = 'block'">Volver</button>
     </div>
   </div>
 
@@ -98,8 +99,7 @@
       <button>Iniciar pedido</button>
       <button>Restaurar pedido</button>
       <button>Consultar pedido</button>
-      <button>Cancelar pedido
-               Iniciar sesion</button>
+      <button>Cancelar pedido</button>
       <div class="volver">
         <button formnovalidate onclick="document.getElementById('pasajero').style.display = 'none'; document.getElementById('seleccionar-tipo-cliente').style.display = 'block'">Volver</button>
       </div>
@@ -119,5 +119,77 @@
     </div>
   </div>
 
+  <div class="container" id="calificacion1" style="display: none;">
+    <form class="formulario-calificacion" action="submit_calificacion_servicio" method="POST" target="_blank">
+      <h2>Calificación de Servicio</h2>
+      <label for="nombre_servicio">Nombre:</label>
+      <input type="text" id="nombre_servicio" name="nombre_servicio" required>
+
+      <label for="email_servicio">Correo Electrónico:</label>
+      <input type="email" id="email_servicio" name="email_servicio" required>
+
+      <label for="comentarios_servicio">Comentarios:</label>
+      <textarea id="comentarios_servicio" name="comentarios_servicio" rows="4" required></textarea>
+
+      <label for="calificacion_servicio">Calificación:</label>
+      <input type="range" id="calificacion_servicio" name="calificacion_servicio" min="1" max="10" required>
+
+      <button type="submit">Enviar</button>
+      <div class="volver">
+        <button type="button" formnovalidate onclick="document.getElementById('container').style.display = 'none'; document.getElementById('inicio').style.display = 'block'">Volver</button>
+      </div>
+    </form>
+  </div>
+
+  <div class="container" id="calificacion2" style="display: none;">
+    <form class="formulario-calificacion" action="submit_calificacion_conductor" method="POST" target="_blank">
+      <h2>Calificación de Conductor</h2>
+      <label for="nombre_conductor">Nombre del Conductor:</label>
+      <input type="text" id="nombre_conductor" name="nombre_conductor" required>
+
+      <label for="email_conductor">Correo Electrónico:</label>
+      <input type="email" id="email_conductor" name="email_conductor" required>
+
+      <label for="comentarios_conductor">Comentarios:</label>
+      <textarea id="comentarios_conductor" name="comentarios_conductor" rows="4" required></textarea>
+
+      <label for="calificacion_conductor">Calificación:</label>
+      <select id="calificacion_conductor" name="calificacion_conductor" required>
+        <option value="excelente">Excelente</option>
+        <option value="bueno">Bueno</option>
+        <option value="regular">Regular</option>
+        <option value="malo">Malo</option>
+      </select>
+
+      <button type="submit">Enviar</button>
+    </form>
+    <div class="volver">
+      <button type="button" formnovalidate onclick="document.getElementById('container').style.display = 'none'; document.getElementById('inicio').style.display = 'block'">Volver</button>
+    </div>
+  </div>
+
+  <div class="container" id="calificacion3" style="display: none;">
+    <form class="formulario-calificacion" action="submit_calificacion_aplicacion" method="POST" target="_blank">
+      <h2>Calificación de la Aplicación</h2>
+      <label for="nombre_aplicacion">Nombre:</label>
+      <input type="text" id="nombre_aplicacion" name="nombre_aplicacion" required>
+
+      <label for="email_aplicacion">Correo Electrónico:</label>
+      <input type="email" id="email_aplicacion" name="email_aplicacion" required>
+
+      <label for="comentarios_aplicacion">Comentarios:</label>
+      <textarea id="comentarios_aplicacion" name="comentarios_aplicacion" rows="4" required></textarea>
+
+      <label for="satisfaccion_aplicacion">Satisfacción:</label>
+      <meter id="satisfaccion_aplicacion" name="satisfaccion_aplicacion" min="0" max="100" value="75"></meter>
+
+      <button type="submit">Enviar</button>
+      <div class="volver">
+        <button type="button" formnovalidate onclick="document.getElementById('container').style.display = 'none'; document.getElementById('inicio').style.display = 'block'">Volver</button>
+      </div>
+    </form>
+  </div>
+
+  
 </body>
 </html>
