--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <button class="button" formnovalidate onclick="document.getElementById('calificacion2').style.display = 'block'; document.getElementById('inicio').style.display = 'none'">Calificacion del conductor</button>
         <button class="button" formnovalidate onclick="document.getElementById('calificacion3').style.display = 'block'; document.getElementById('inicio').style.display = 'none'">Calificacion de la APP</button>
         <button class="button" formnovalidate onclick="document.getElementById('feliz-navidad').style.display = 'block'; document.getElementById('inicio').style.display = 'none'">Feliz Navidad!</button>
+        <button class="button" formnovalidate onclick="document.getElementById('halloween').style.display = 'block'; document.getElementById('inicio').style.display = 'none'">Halloween</button>
     </div>
-
    
      <!-- Contenido de Feliz Navidad -->
      <div class="container navidad-container" id="feliz-navidad">
@@ -205,5 +205,20 @@
             </div>
         </form>
     </div>
+
+    <div class="container halloween-container" id="halloween">
+        <div class="background-container">
+            <div class="background-static"></div>
+            <div class="background-moving"></div>
+            <div class="content">
+                <h1 class="halloween-texto">Bienvenido a Halloween</h1>
+                <p class="halloween-texto">al mundo de los muertos</p>
+                <p class="halloween-texto"> MUAJAJAJAJAJA</p>
+                <P class="halloween-texto"><3</P>
+            </div>
+            
+        </div>
+    </div>
+
 </body>
 </html>
